on text rectify

--- a/kaggle_tweet_competition.ipynb
+++ b/kaggle_tweet_competition.ipynb
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most important columns are certainly `text` (me work on the text of the tweet) and `target` which we want to predict."
+    "The most important columns are certainly `text` (we are working on the text of the tweet) and `target` which we want to predict."
    ]
   },
   {
@@ -2680,7 +2680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A human would certainly predict the target of a tweet very easily. The accuracy of a human prediction would be higher than 80%: -20% because some tweets can just contains deep jokes that cannot be interpret as they are (not a disaster) or can be contains bad writings even they are serious."
+    "A human would certainly predict the target of a tweet very easily. The accuracy of a human prediction would be higher than 80%: -20% because some tweets can just contains deep jokes that cannot be interpret as they are (not a disaster) or can be contains bad writings even if they are serious."
    ]
   }
  ],
