add some comments to footer

--- a/kaggle_tweet_competition.ipynb
+++ b/kaggle_tweet_competition.ipynb
@@ -85479,7 +85479,15 @@
     }
    ],
    "source": [
-    "process_text.data_frame.head()"
+    "train_set_.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's count the occurrence of each target class."
    ]
   },
   {
@@ -85501,7 +85509,15 @@
     }
    ],
    "source": [
-    "process_text.data_frame['target'].value_counts()"
+    "train_set_['target'].value_counts()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The occurrence of class 0 (no disaster) is more important than that of class 1 (disaster)."
    ]
   }
  ],
