modification du notebook sur les artistes

--- a/open_classroom1_Recuperation_exploration_corpus.ipynb
+++ b/open_classroom1_Recuperation_exploration_corpus.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "  \"\\n\\t\\t\\t\\tPages pour les contributeurs déconnectés en savoir plus\\nmodifier - modifier le code - modifier WikidataClaus Sluter, ou encore Claes de Slutere van Herlamen (né à Haarlem vers 1355 - † janvier 1406 à Dijon) est un sculpteur originaire des Pays-bas au service des ducs de Bourgogne. Son œuvre novatrice a durablement influencé la sculpture gothique internationale de son temps. Parmi ses chefs-d'œuvre, sont encore conservés le portail de la chapelle de la chartreuse de Champmol, le puits de Moïse ou le tombeau de Philippe le Hardi qu'il a entamé.\\nIl est sans doute né à Haarlem en Hollande. Il s'est tout d'abord probablement formé à Bruxelles, où il est enregistré sur le registre des tailleurs de pierre comme Claes de Slutere van Herlamen en 1379. Il aurait, semble-t-il, fait un passage par Paris, et on attribue au jeune Sluter, les consoles de la tour du village du château de Vincennes (environ 1375). Il est attaché dès 1383 à la cour de Philippe le Hardi, duc de Bourgogne[1].\\nLe duc Philippe le Hardi le fait venir à Dijon où il s'installe le 1er mars 1385 avec d'autres tailleurs de pierre du Brabant pour constituer l'équipe de Champmol. Il est le second ouvrier de l'ymagier d'autel et varlet de chambre de Monseigneur Jean de Marville[2]. Jean de Marville tombe gravement malade le 1er mai 1389 et doit fermer l'atelier. Sluter devient à son tour l'ymagier officiel du duc Philippe et reprend l'atelier le 23 juillet. L'atelier des sculpteurs désormais quasiment entièrement constitué de sculpteurs d'origine flamande\\xa0: Philippot van Eram, Gillequin Tailleleu et son fils Tassin, Liefvin de Hane et son frère Mant, Hannequin Vauclair, Thomassin dit Larmite et Hannequin Stienne Vauclair. Mais il est aussi absorbé par d'autres tâches, soit pour la chartreuse de Champmol (l'oratoire ducal, le portail de l'église ou le calvaire du grand cloître dit Puits de Moïse), soit pour la chapelle ducale, soit pour les châteaux du duc et de la duchesse Marguerite de Flandre. Son travail à la cour du duc Philippe le Hardi était également largement occupé par la création d'œuvres pour des occasions uniques, tels des blasons ou des banderoles.\\nDès juin 1390, Claus Sluter fut épaulé à Dijon par trois collaborateurs bruxellois, à savoir Jan van Prindael et Willem Smout - ou Willequin Semonst - qui vinrent renforcer Hennequin de Brucelles présent depuis avril et Jehan de Selles, peut-être Bruxellois lui aussi, et qui était présent depuis février-mars. Smout resta au moins jusqu'en 1394, van Prindael jusqu'en 1399 - 1400. Depuis le 1er décembre 1396, Klaas van de Werve, son neveu et héritier, fut également actif à Dijon. Willem Smout travailla notamment ensuite à Lyon en 1398. Jan van Prindael, après un court séjour à Bruxelles où il fut juré du métier en 1403, travailla à Genève, à Chambéry et en Provence. Ainsi, tous les élèves et collaborateurs bourguignons de Claus Sluter contribuèrent à répandre le réalisme sculptural qu'il avait conçu et promu.\\nLe sculpteur tombe malade en 1399. Il quitte son logis au sein du palais des ducs en 1404 pour se retirer à l'abbaye Saint-Étienne de Dijon[3]. Il meurt quelques mois après, probablement en janvier 1406, célibataire sans enfant, son neveu Claus de Werve - ou Klaas van de Werve - étant son seul héritier. Les dernières statues du puits de Moïse sont achevées et scellées sur place au début de l'année 1405, d'après ce qu'indique l'inventaire de son atelier après sa mort en 1406. Le marché signé en 1404 pour l'achèvement du tombeau de Philippe de Bourgogne est d'ailleurs repris par le neveu[4].\\nClaus Sluter amène la sculpture à un niveau d'expressivité nouveau. Les statues cessent désormais de faire corps avec l'architecture et la physionomie est traitée de façon naturaliste, n'hésitant pas à accuser les aspects de la laideur et de la souffrance. Les pleurants serviront de référence aux monuments funéraires du siècle en France, à commencer par le Tombeau de Jean sans Peur et de Marguerite de Bavière.\\nLa pièce maitresse de la Chartreuse de Champmol, commencée par Jean de Marville, puis Claus Sluter et terminée après sa mort par son élève et neveu, Claus de Werve.\\nClaus Sluter laisse le tombeau de Philippe le Hardi en chantier. Aussi, lorsque Philippe le Hardi meurt à Hal le 27 avril 1404, la partie sculpturale reste entièrement à faire. Le 14 juillet 1404, le duc Jean sans Peur, fils de Philippe le Hardi, charge Claus Sluter d'exécuter les sculptures en quatre ans. À cette date, seulement deux des «\\xa0pleurants\\xa0» (statuettes) ont été réalisés. Or le cadre architectural, élaboré par Jean de Marville, a ménagé la place pour quarante personnages. Claus Sluter est déjà malade au moment de la mort du duc Philippe le Hardi et vit à demi-retiré depuis le 7 avril 1404 à l'abbaye Saint-Étienne, proche de son ouvroir. Il lui est impossible d'assumer l'exécution des pleurants du tombeau, ainsi que trois des prophètes pour le Puits de Moise. Il fut achevé par son neveu et élève Claus de Werve jusqu'à sa livraison, en 1410. Le tombeau pris place dans le chœur de la chapelle de la Chartreuse. Après la Révolution, le cénotaphe a été déplacé dans la Cathédrale Saint-Bénigne de Dijon, puis au Palais des ducs de Bourgogne, actuellement musée des beaux-arts de Dijon.\\nPleurants de la tombe de Philippe le Hardi (1410)\\nPleurant aux mains levées du Tombeau de Philippe le Hardi (1410)\\nLe puits sculpté qui accueillait auparavant un calvaire, était situé au centre du grand cloître. Il nous reste la représentation de six prophètes, empreinte de réalisme et d'expression. Des fragments du calvaire le surplombant sont par ailleurs conservés au musée archéologique de Dijon, et notamment le buste du Christ, cependant l'attribution de cette dernière sculpture a été depuis remise en cause[5].\\nLe puits de Moïse, Daniel et Isaïe\\nLe puits de Moïse, Moïse et David\\nLe puits de Moïse, David et Jérémie\\nLe portail a été commencé par Jean de Marville en 1388, puis agrandi par Claus Sluter, qui a réalisé les cinq statues, achevées en 1393. Ces statues représentent Une Vierge à l'enfant en torsion dynamique et détachée par sa dimension et sa forme de l'architecture de la porte. Elle est encadrée de chaque côté par les donateurs\\xa0: Philippe le Hardi et son épouse Marguerite de Flandre, en priants réalistes et grandeur nature, avec leurs saints protecteurs\\xa0: sainte Catherine d'Alexandrie et saint Jean-Baptiste. L'ensemble crée une perspective propre affranchie de la verticalité de la porte.\\nLes statues des mécènes (Philippe le Hardi et Marguerite de Flandre) seraient d'authentiques portraits, car ils présentent les défauts physiques du duc et de la duchesse (le fameux double-menton de Marguerite de Flandres). Les draperies et les vêtements sont traités avec dynamisme, énergie et mouvement, les expressions des personnages sont d'un grand réalisme.\\nPortail de la chapelle de la Chartreuse de Champmol (1393)\\nLa Vierge du trumeau regardant le Christ\\nLa comptabilité des ducs de Bourgogne nous renseignent sur deux œuvres réalisées par Claus Sluter et ses collaborateurs dans le château de Germolles, résidence de plaisance de la duchesse Marguerite de Flandre. On sait ainsi que le maître réalisa entre 1393 et 1396 une sculpture destinée à être placée dans la cour du château, représentant Philippe le Hardi et Marguerite de Flandre placés sous un orme et entourés de brebis[6]. De même, il réalisa pour l'entrée de la résidence une Notre Dame entre 1397 et 1399, au-dessus de la porte du château. Alors que ces deux œuvres ont disparu le travail de Sluter et de son atelier apparaît dans les éléments de la cheminée monumentale de la grande salle à travers deux figures-consoles et l'illustration d'un passage du roman de Chrétien de Troyes\\xa0: Yvain ou le Chevalier au lion.\\nQuelques œuvres actuellement conservées dans des musées sont attribuées à Claus Sluter ou plus vraisemblablement à son atelier.\\nSur les autres projets Wikimedia\\xa0:\")]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,6 +1261,187 @@
     "ax = df_top['total'].plot(kind=\"bar\", color = \"#64f38c\", title=\"Top 30 des artistes avec le plus de mots utilisés avec stemming des mots\", legend=\"total\")\n",
     "df_top['unique'].plot(kind=\"bar\", color = \"#f79d00\", ax = ax, legend=\"unique\")\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous allons utiliser la classe de traitement de texte concu lors du traitement qu'on avait effectué pour la compétition sur les tweets. Pour cela nous devrons prendre les artistes comme les targets et les phrases comme les documents et mettre le résultat dans un data frame de pandas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# création d'un dictionnaire prenant en compte les transformations évoquées ci-dessus\n",
+    "artistes_dict = {\n",
+    "    'artistes': [],\n",
+    "    'documents': []\n",
+    "}\n",
+    "\n",
+    "for artiste, texte in artistes.items():\n",
+    "    docs = nltk.tokenize.sent_tokenize(texte, language=\"french\")\n",
+    "    artistes_dict['documents'].extend(docs)\n",
+    "    artistes_dict['artistes'].extend([artiste]*len(docs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transformation du dictionnaire en data frame\n",
+    "artistes_df = pd.DataFrame.from_dict(artistes_dict, orient='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artistes</th>\n",
+       "      <th>documents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9923</th>\n",
+       "      <td>Ignace-François Bonhommé</td>\n",
+       "      <td>En 1836, il entame une série de dessins, d'aqu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13366</th>\n",
+       "      <td>Édouard Manet</td>\n",
+       "      <td>D'autres tableaux comme Au café ou La Prune da...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22507</th>\n",
+       "      <td>Auguste Herbin</td>\n",
+       "      <td>Il se consacre dans ces années à une peinture ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25837</th>\n",
+       "      <td>Alberto Giacometti</td>\n",
+       "      <td>Il souligne que Giacometti n'a jamais franchi ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>Jean Goujon</td>\n",
+       "      <td>Peu après, il réalise les Cariatides de la pla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18782</th>\n",
+       "      <td>Pierre Bonnard</td>\n",
+       "      <td>Il s'abstient surtout de vendre des tableaux p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25065</th>\n",
+       "      <td>Brassaï</td>\n",
+       "      <td>Il commence sa série Graffiti.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4614</th>\n",
+       "      <td>Antoine Watteau</td>\n",
+       "      <td>Pour les autres significations, voir Watteau (...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17635</th>\n",
+       "      <td>Antoine Bourdelle</td>\n",
+       "      <td>Bien que considérées comme un tout, les trois ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11530</th>\n",
+       "      <td>Alexandre Cabanel</td>\n",
+       "      <td>Il reçoit les insignes de chevalier de la Légi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       artistes  \\\n",
+       "9923   Ignace-François Bonhommé   \n",
+       "13366             Édouard Manet   \n",
+       "22507            Auguste Herbin   \n",
+       "25837        Alberto Giacometti   \n",
+       "860                 Jean Goujon   \n",
+       "...                         ...   \n",
+       "18782            Pierre Bonnard   \n",
+       "25065                   Brassaï   \n",
+       "4614            Antoine Watteau   \n",
+       "17635         Antoine Bourdelle   \n",
+       "11530         Alexandre Cabanel   \n",
+       "\n",
+       "                                               documents  \n",
+       "9923   En 1836, il entame une série de dessins, d'aqu...  \n",
+       "13366  D'autres tableaux comme Au café ou La Prune da...  \n",
+       "22507  Il se consacre dans ces années à une peinture ...  \n",
+       "25837  Il souligne que Giacometti n'a jamais franchi ...  \n",
+       "860    Peu après, il réalise les Cariatides de la pla...  \n",
+       "...                                                  ...  \n",
+       "18782  Il s'abstient surtout de vendre des tableaux p...  \n",
+       "25065                     Il commence sa série Graffiti.  \n",
+       "4614   Pour les autres significations, voir Watteau (...  \n",
+       "17635  Bien que considérées comme un tout, les trois ...  \n",
+       "11530  Il reçoit les insignes de chevalier de la Légi...  \n",
+       "\n",
+       "[100 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "artistes_df.sample(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1279,7 +1460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
