add n grams to processing / made analyzing

--- a/n_grams.ipynb
+++ b/n_grams.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +310,211 @@
    "source": [
     "get_n_grams(mots[1], 3)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Markov assumption (hypothèse de Markov)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Après l'obtention des n-grams il nous est possible de prédire le prochain mot dans une séquence à partir des précédents mots la composant. Pour cela on doit calculer, pour chaque possible prochain mot, la probabilité que celui occure sachant que les mots précédents font déja partis de la séquence."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemple :\n",
+    "\n",
+    "Pour calculer la probabilité que le prochain mot de la sous séquence \"L'audace et la romance semblent être passées à jamais dans le monde\" soit le mot \"criminel\" nous aurons:\n",
+    "\n",
+    "$$\n",
+    "P(prochain\\_mot = \\text{\"criminel\"} / \\text{sous-séquence}) =\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{\\text{nombre d'occurences \"L'audace et la romance semblent être passées à jamais dans le monde criminel\"}}{\\text{nombre d'occurences \"L'audace et la romance semblent être passées à jamais dans le monde\"}}\n",
+    "$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cette méthode est peut recommendable car elle peut biaiser notre résultat car dans la plupart des cas le nombre d'occurences d'une sous-séquence aussi grande est très faible (surtout dans notre cas où les phrases ont une composition très complexe)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour pallier à ce problème nous allons à la place utiliser les n-grams pour ne prendre comme sous-séquence que les n mots précédents le possible prochain mot. On utilisera, dans cette dernière option, l'hypothèse de Markov selon laquelle la probabilité qu'un événement se produit ne dépend que des $o$ derniers événements et non de tous les événements qui se sont produits depuis le début. $o$ représente l'ordre de Markov qui est le nombre d'événements que l'on considère comme influentes pour produire le prochain événement."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exemple : Pour l'exemple précédent aulieu de prendre en compte toute la sous-séquence \"L'audace et la romance semblent être passées à jamais dans le monde\", si nous utilisons un bigramme (2-grams), nous ne prendrons que les deux derniers mots de la sous-séquence \"le monde\". Si par contre nous utilisons un trigramme (3-grams), nous aurons comme sous-séquence résultante \"dans le monde\". Donc la probabilité que le prochain soit \"criminel\" peut-être obtenue avec le prochain calcul:\n",
+    "\n",
+    "$$\n",
+    "P(prochain\\_mot = \\text{\"criminel\"} / \\text{bigrammes = \"le monde\"}) = \\frac{\\text{nombre d'occurences \"le monde criminel\"}}{\\text{nombre d'occurences \"le monde\"}}\n",
+    "$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Effectuons un autre exemple avec la librairie `spacy` qui contient toutes les fonctions dont nous aurons utiliser pour calculer les n-grams, tokéniser les documents et calculer les probabilités/distributions en vue de la prédiction du prochain mot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chargeons le modèle francais."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load(\"fr_core_news_md\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilisons une fonction de tokénisation que nous avions créé pour les tweets. Nous allons fournir le texte que nous avions utiliser au début."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nlp_project.processing.utils import tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens, pos_tags = tokenization(nlp, [texte], rm_stopwords=False, lemmatize=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La méthode retourne une liste de tokens pour chaque document et nous n'avons fourni qu'un seul document donc nous obtenons une seule liste que nous allons récupérer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = tokens[0]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Récupérons à présent les bigrammes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigrams = get_n_grams(tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['les papiers',\n",
+       " 'papiers sont',\n",
+       " 'sont audace',\n",
+       " 'audace et',\n",
+       " 'et la',\n",
+       " 'la romance',\n",
+       " 'romance semblent',\n",
+       " 'semblent jamais',\n",
+       " 'jamais dans',\n",
+       " 'dans le',\n",
+       " 'le monde',\n",
+       " 'monde criminel',\n",
+       " 'criminel pouvez',\n",
+       " 'pouvez alors',\n",
+       " 'alors me',\n",
+       " 'me demander',\n",
+       " 'demander si',\n",
+       " 'si je',\n",
+       " 'je suis',\n",
+       " 'suis examiner',\n",
+       " 'examiner un',\n",
+       " 'un nouveau',\n",
+       " 'nouveau aussi',\n",
+       " 'aussi insignifiant']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bigrams"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -328,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
